
Copyright (c) 1998-2010 Paulo Moura.        All Rights Reserved.
Logtalk is free software.  You can redistribute it and/or modify
it under the terms of the "Artistic License 2.0" as published by 
The Perl Foundation. Consult the "LICENSE.txt" file for details.
================================================================


RELEASE NOTES
=============


2.41.1 - September ??, 2010

    Corrected an optimization bug in the compilation of grammar rules that
    resulted in failed compilations whenever the body of a grammar rule was
    equivalent to fail/0. Thanks to Ulrich Neumerkel for the bug report.

    Corrected an optimization bug in the compilation of grammar rules that
    resulted in incorrect compilations when folding pairs of consecutive
    variable unifications generated as a by-product of the translation of
    grammar rules into clauses. Thanks to Ulrich Neumerkel for the bug report.

    Corrected a bug in the table of ISO Prolog specified arithmetic functions
    that is used by the Logtalk compiler when checking arithmetic expressions
    for portability (wrong arity of the bitwise complement function).

    Corrected a bug in the compilation of calls to Prolog proprietary built-in
    meta-predicates that are redefined within an object or category.

    Updated the SICStus Prolog, SWI-Prolog, and YAP config files in order
    to correct a bug in the compilation of the ensure_loaded/1 directive
    when used within a Prolog module being compiled as an object.

    Updated the YAP config file to workaround a bug in the built-in predicate
    absolute_file_name/3 where a directory can be returned when looking for a
    regular file.

    Removed some unused files from the "coinduction" example.


2.41.0 - September 15, 2010

    Added experimental support for coinductive predicates to the Logtalk
    compiler using a coinductive/1 directive. Requires a back-end Prolog
    compiler providing minimal support for cyclic terms (currently, YAP,